--- a/src/styling/Nav.css
+++ b/src/styling/Nav.css
@@ -43,16 +43,14 @@ ul {
   text-decoration: none;
   position: relative;
   list-style: none;
-  text-align: center;
+  text-align: left;
   letter-spacing: .1em;
-  padding: 0;
+  padding-left: 25%;
   margin: 0 auto;
 }
 
-li:hover {
-  transform: scale(1.02);
-  filter: brightness(1);
-  font-weight: 800;
+li {
+  text-align: left;
 }
 
 
