--- a/src/styling/Nav.css
+++ b/src/styling/Nav.css
@@ -26,7 +26,7 @@
   text-align: center;
   /* letter-spacing: .1em; */
   padding: 0;
-  margin: 0 auto;
+  margin-left: 0%;
 }
 
 ul {
@@ -37,6 +37,7 @@ ul {
 }
 
 .menu {
+  width: 100%;
   font-family: 'Open Sans';
   font-size: 1.15rem;
   color: #f5f1e4;
@@ -45,8 +46,8 @@ ul {
   list-style: none;
   text-align: left;
   letter-spacing: .1em;
-  padding-left: 25%;
   margin: 0 auto;
+  margin-left: 10%;
 }
 
 li {
